--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -56,7 +56,7 @@ $paragraph-font: $head-font/2;
 
 @media only screen and (max-width: 1155px) {
     .footer {
-        background-image: url('/phone-bg.svg');
+        // background-image: url('/phoneBg.svg');
         justify-content : center;
 
     }
